@@ -1,3 +1,8 @@
+Mon Jan 01 12:56:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/dblib.c src/tds/query.c:
+	- remove some warning compiling with SUN compiler
+	- Happy New Year
+
 Fri Dec 29 20:43:55 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/mem.c: remove warning and optimize
 
